/*
Copyright Â© 2021 Nikita Ivanovski info@slnt-opp.xyz

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";
package nocloud.instance.driver.vanilla;

option go_package = "github.com/slntopp/nocloud/pkg/drivers/instance/vanilla";

import "pkg/instances/proto/instances.proto";
import "pkg/services_providers/proto/services_providers.proto";

message GetTypeRequest {}
message GetTypeResponse {
    string type = 1;
}

message UpRequest {
    nocloud.instances.InstancesGroup group = 1;
    nocloud.services_providers.ServicesProvider services_provider = 2;
}

message UpResponse {
    nocloud.instances.InstancesGroup   group = 1;
}

service DriverService {
    rpc TestServiceProviderConfig(nocloud.services_providers.ServicesProvider) returns (nocloud.services_providers.TestResponse);
    rpc TestInstancesGroupConfig(nocloud.instances.TestInstancesGroupConfigRequest) returns (nocloud.instances.TestInstancesGroupConfigResponse);
    rpc GetType(GetTypeRequest) returns (GetTypeResponse);

    rpc Up(UpRequest) returns (UpResponse);
}